1.10.0/_sources/examples_built/registration/index.rst.txt


.. _sphx_glr_examples_built_registration:

Registration
------------




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example explains how to coregister a set of bundles to a common space that is not biased by any specific bundle. This is useful when we want to align all the bundles but do not have a target reference space defined by an atlas :footciteRomeroBascones2022.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_bundle_group_registration_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_bundle_group_registration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Groupwise Bundle Registration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example explains how you can register two bundles from two different subjects directly in the space of streamlines :footciteGaryfallidis2014b, :footciteGaryfallidis2015.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_bundle_registration_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_bundle_registration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Direct Bundle Registration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates registration of a binary and a fuzzy image. This could be seen as aligning a fuzzy (sensed) image to a binary (e.g., template) image.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_register_binary_fuzzy_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_register_binary_fuzzy.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Diffeomorphic Registration with binary and fuzzy images</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We will register two 3D volumes from the same modality using SyN with the Cross -Correlation (CC) metric.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_syn_registration_3d_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_syn_registration_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Symmetric Diffeomorphic Registration in 3D</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We will perform the classic Circle-To-C experiment for diffeomorphic registration">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_syn_registration_2d_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_syn_registration_2d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Symmetric Diffeomorphic Registration in 2D</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example explains how you can nonlinearly register two bundles from two different subjects directly in the space of streamlines :footciteChandio2023, :footciteChandio2020b.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_bundlewarp_registration_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_bundlewarp_registration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Nonrigid Bundle Registration with BundleWarp</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to register streamlines into a template space by applying non-rigid deformations.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_streamline_registration_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_streamline_registration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Applying image-based deformations to streamlines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example explains how to compute a transformation to register two 3D volumes by maximization of their Mutual Information [Mattes03]_. The optimization strategy is similar to that implemented in ANTS [Avants11]_.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_affine_registration_masks_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_affine_registration_masks.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Affine Registration with Masks</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example explains how to compute an affine transformation to register two 3D volumes by maximization of their Mutual Information :footciteMattes2003. The optimization strategy is similar to that implemented in ANTS :footciteAvants2009.">

.. only:: html

  .. image:: /examples_built/registration/images/thumb/sphx_glr_affine_registration_3d_thumb.png
    :alt:

  :ref:`sphx_glr_examples_built_registration_affine_registration_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Affine Registration in 3D</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples_built/registration/bundle_group_registration
   /examples_built/registration/bundle_registration
   /examples_built/registration/register_binary_fuzzy
   /examples_built/registration/syn_registration_3d
   /examples_built/registration/syn_registration_2d
   /examples_built/registration/bundlewarp_registration
   /examples_built/registration/streamline_registration
   /examples_built/registration/affine_registration_masks
   /examples_built/registration/affine_registration_3d

